--- a/scss/columns.scss
+++ b/scss/columns.scss
@@ -33,7 +33,77 @@
 	}
 }
 
-.about, .team {
+.intro .column {
+
+	.column__item {
+		width: 25%;
+		height: 85px;
+
+		span {			
+			@include center;
+			justify-content: start;
+			@include ffr700;
+			font-size: 36px;
+			color: $soft_yellow;
+			position: relative;
+			line-height: 85px;
+
+			small {
+				@include ffr500;
+				font-size: 18px;
+				text-transform: uppercase;
+				padding-top: 9px;
+				line-height: 76px;
+			}
+
+			&::before {
+				content: '';
+				position: absolute;
+				background: $soft_yellow;
+				left: 0;
+				top: -4px;
+				width: 100%;
+				height: 4px;
+			}
+		}
+
+		&:first-child {
+
+			&::before {
+				content: '';
+				position: absolute;
+				z-index: 9;
+				background: $white;				
+				left: 15px;
+				right: 15px;
+				top: -4px;
+				width: calc(100% - 30px);
+				height: 4px;
+			}
+			
+			&::after {
+				content: '';
+				position: absolute;
+				z-index: 10;
+				background: $pink;
+				left: 15px;
+				top: -4px;
+				width: 70px;
+				height: 4px;
+			}
+		}
+
+		&--active {
+
+			span {
+				color: $white;
+			}
+		}
+	}
+
+}
+
+.about, .team, .works {
 
 	.column__next {		
 		display: none;
