--- a/scss/reviews.scss
+++ b/scss/reviews.scss
@@ -1,53 +1,57 @@
 .reviews {
-	height: 254px;
 
-	.carousel-item {
+	.carousel-inner {
+		max-width: 970px;
+		margin: 0 auto;
+		padding: 42px 0;
+
+		.carousel-item {
 		
-		img {
-			width: 170px;
-			height: 170px;
-			margin-right: 30px;
-		}
-
-		.carousel-img--without-photo {
-			padding: 35px;
-			border: 2px solid $mint;
-		}
-
-		.reviews__content {
-			
-			p {
-				color: #A9AFB1;
-				@include ffr500it;
-				@include center;
-				font-size: 24px;
-				line-height: 28px;
-				text-align: left;
-				padding: 6px 0;
-				margin-bottom: 21px;
+			img {
+				width: 170px;
+				height: 170px;
+				margin-right: 30px;
 			}
 
-			.reviews__name {
-				@include ffks400;
-				@include center;
-				font-size: 30px;
-				line-height: 53px;
-				justify-content: start;
-				padding-left: 126px; 
-				position: relative;
+			.carousel-img--without-photo {
+				padding: 35px;
+				border: 2px solid $mint;
+			}
 
-				&::after {
-					content: '';
-					position: absolute;
-					top: 23px;
-					left: 0;
-					width: 70px;
-					height: 4px;
-					background: $pink;
+			.reviews__content {
+				
+				p {
+					color: #A9AFB1;
+					@include ffr500it;
+					@include center;
+					font-size: 24px;
+					line-height: 28px;
+					text-align: left;
+					padding: 6px 0;
+					margin-bottom: 21px;
+				}
+
+				.reviews__name {
+					@include ffks400;
+					@include center;
+					font-size: 30px;
+					line-height: 53px;
+					justify-content: start;
+					padding-left: 126px; 
+					position: relative;
+
+					&::after {
+						content: '';
+						position: absolute;
+						top: 23px;
+						left: 0;
+						width: 70px;
+						height: 4px;
+						background: $pink;
+					}
 				}
 			}
 		}
-
 	}
 
 	&--grey {
