--- a/scss/works.scss
+++ b/scss/works.scss
@@ -8,6 +8,11 @@
 	.works__items {
 		position: relative;
 
+		img {
+			width: 100%;
+			height: 100%;
+		}
+
 		.column__content--gradient {
 			@include column__content--gradient;
 			left: 0;
