--- a/scss/columns.scss
+++ b/scss/columns.scss
@@ -20,6 +20,11 @@
 				color: $dark;
 				@include ffr700;
 				@include center;
+
+				@media (max-width: 1200px) {
+					font-size: 18px;
+					line-height: 21px;
+				}
 			}
 
 			p {
@@ -28,16 +33,27 @@
 				font-size: 18px;
 				line-height: 21px;
 				@include center;
+
+				@media (max-width: 1200px) {
+					font-size: 14px;
+					line-height: 16px;
+				}
 			}
 		}
 	}
 }
 
 .intro .column {
+	margin: 0 -10px;
 
 	.column__item {
 		width: 25%;
 		height: 85px;
+		padding: 0 10px;
+
+		@media (max-width: 1200px) {
+			height: 58px;
+		}
 
 		span {			
 			@include center;
@@ -48,12 +64,23 @@
 			position: relative;
 			line-height: 85px;
 
+			@media (max-width: 1200px) {
+				font-size: 24px;
+				line-height: 58px;
+			}
+
 			small {
 				@include ffr500;
 				font-size: 18px;
 				text-transform: uppercase;
 				padding-top: 9px;
 				line-height: 76px;
+
+				@media (max-width: 1200px) {
+					font-size: 14px;
+					line-height: 49px;
+					padding-top: 5px;
+				}
 			}
 
 			&::before {
@@ -79,6 +106,13 @@
 				top: -4px;
 				width: calc(100% - 30px);
 				height: 4px;
+
+				@media (max-width: 1200px) {
+					left: 10px;
+					right: 10px;
+					top: -4px;
+					width: calc(100% - 20px);
+				}
 			}
 			
 			&::after {
@@ -90,6 +124,11 @@
 				top: -4px;
 				width: 70px;
 				height: 4px;
+
+				@media (max-width: 1200px) {
+					width: 64px;
+					left: 10px;
+				}
 			}
 		}
 
@@ -113,6 +152,10 @@
 .about .column {
 	margin-top: 58px;
 
+	@media (max-width: 1200px) {
+		margin-top: 49px;
+	}
+
 	.column__item {
 
 		.column__content--gradient {
@@ -125,6 +168,11 @@
 
 			.column__icon {
 				margin: 0 auto;
+
+				@media (max-width: 1200px) {
+					width: 33px;
+					height: 33px;
+				}
 			}
 
 			p {
@@ -135,6 +183,12 @@
 				text-transform: uppercase;
 				color: $white;
 				margin-top: 30px;
+
+				@media (max-width: 1200px) {
+					font-size: 18px;
+					line-height: 21px;
+					margin-top: 25px;
+				}
 			}
 		}
 
@@ -158,6 +212,12 @@
 				z-index: 4;
 				width: calc(100% - 30px);
 				height: 100%;
+
+				@media (max-width: 1200px) {	
+					left: 13px;
+					right: 13px;
+					width: calc(100% - 26px);
+				}
 			}
 		}
 	}
@@ -166,6 +226,10 @@
 .services .column {
 	flex-wrap: wrap;
 	margin-top: 80px;
+
+	@media (max-width: 1200px) {
+		margin-top: 68px;
+	}
 	
 	.column__item {
 		display: flex;
@@ -174,6 +238,12 @@
 			height: 70px;
 			width: 70px;
 			margin-right: 30px;
+
+			@media (max-width: 1200px) {
+				height: 59px;
+				width: 59px;
+				margin-right: 25px;
+			}
 		}
 
 		.column__text {
@@ -182,22 +252,47 @@
 				height: 51px;
 				margin-top: 8px;
 				justify-content: start;
+
+				@media (max-width: 1200px) {
+					height: 43px;
+					margin-top: 7px;
+				}
 			}
 
 			p {
 				height: 80px;
 				text-align: left;
+
+				@media (max-width: 1200px) {
+					height: 68px;
+				}
 			}
 		}
 	}
 
 	.column__item:nth-of-type(4), .column__item:nth-of-type(5), .column__item:nth-of-type(6) {
 		margin-top: 140px;
+
+		@media (max-width: 1200px) {
+			margin-top: 58px;
+		}
 	}
 }
 
+// .platform .column {
+// 	margin-top: 42px;
+
+// 	.column__item {
+// 		width: 50%;
+// 	}
+// }
+
 .team .column {
 	margin-top: 58px;
+
+	@media (max-width: 1200px) {
+		margin-top: 49px;
+	}
 
 	.column__item {
 
@@ -219,6 +314,11 @@
 				.column__icon {
 					width: 42px;
 					height: 42px;
+
+					@media (max-width: 1200px) {
+						width: 36px;
+						height: 36px;
+					}
 				}
 			
 			}	
@@ -240,11 +340,19 @@
 
 			h4 {
 				height: 80px;
+
+				@media (max-width: 1200px) {
+					height: 49px;
+				}
 			}
 
 			p {
 				height: 30px;
 				text-transform: uppercase;
+
+				@media (max-width: 1200px) {
+					height: 19px;
+				}
 			}
 		}
 	}
@@ -254,6 +362,10 @@
 	margin: 0 -25px 0 -5px;
 	flex-wrap: wrap;
 
+	@media (max-width: 1200px) {
+		margin: 0 -25px 0 7px;
+	}
+
 	.column__item {
 		@include column__item;
 		width: 50%;
@@ -261,10 +373,22 @@
 		padding: 0 25px;
 		display: flex;
 
+		@media (max-width: 1200px) {
+			margin-top: 28px;
+			padding: 0 27px;
+		}
+
+
 		img {
-			margin: 20px 50px 0 0;
+			margin: 20px 50px auto 0;
 			height: 130px;
 			width: 130px;
+
+			@media (max-width: 1200px) {
+				margin: 14px 49px auto 0;
+				height: 88px;
+				width: 88px;
+			}
 		}
 
 		.column__text {
@@ -272,6 +396,10 @@
 			h4 {
 				justify-content: start;
 				height: 52px;
+
+				@media (max-width: 1200px) {
+					height: 35px;
+				}
 			}
 
 			h5 {
@@ -286,6 +414,13 @@
 				margin-bottom: 32px;
 				position: relative;
 
+				@media (max-width: 1200px) {
+					line-height: 13px;
+					font-size: 14px;
+					padding-bottom: 22px;
+					margin-bottom: 22px;
+				}
+
 				&::after {
 					content: '';
 					position: absolute;
@@ -295,12 +430,20 @@
 					height: 4px;
 					width: 70px;
 					background: $pink;
+
+					@media (max-width: 1200px) {
+						width: 47px;
+					}
 				}
 			}
 
 			p {
 				height: 150px;
 				text-align: left;
+
+				@media (max-width: 1200px) {
+					height: 101px;
+				}
 			}
 		}	
 	}
@@ -309,19 +452,29 @@
 .blog .column {
 	margin-top: 42px;
 
+	@media (max-width: 1200px) {
+		margin-top: 36px;
+	}
+
 	.column__wrap {			
 		position: relative;
 		
 		&::after {
 			content: '';
 			left: -14px;
-			right: 304px;
 			bottom: 25px;
 			position: absolute;
 			z-index: 5;
 			width: 80px;
 			height: 80px;
 			background: $mint;
+
+			@media (max-width: 1200px) {
+				left: -6px;
+				bottom: 21px;
+				width: 68px;
+				height: 68px;
+			}
 		}
 
 		.column__next {
@@ -330,19 +483,31 @@
 			justify-content: space-between;			
 			position: absolute;
 			left: -14px;
-			right: 304px;
 			bottom: 25px;
 			width: 80px;
 			height: 80px;
 			z-index: 10;
 			color: $white;
 			padding: 8px;
+
+			@media (max-width: 1200px) {
+				left: -6px;
+				bottom: 21px;
+				width: 68px;
+				height: 68px;
+				padding: 10px;
+			}
 			
 			.column__number {
 				@include ffr700;
 				@include center;
 				font-size: 36px;
 				line-height: 30px;
+
+				@media (max-width: 1200px) {
+					font-size: 24px;
+					line-height: 24px;
+				}
 			}
 
 			.column__month {				
@@ -351,6 +516,11 @@
 				font-size: 18px;
 				line-height: 25px;
 				text-transform: uppercase;
+
+				@media (max-width: 1200px) {
+					font-size: 14px;
+					line-height: 24px;
+				}
 			}
 		}
 	}
@@ -360,12 +530,22 @@
 		h4 {
 			margin-top: 30px;
 			line-height: 40px;
+
+			@media (max-width: 1200px) {
+				margin-top: 26px;
+				line-height: 34px;
+			}
 		}
 
 		p {
 			height: 120px;
 			text-align: left;
 			margin-bottom: 23px;
+
+			@media (max-width: 1200px) {
+				height: 101px;
+				margin-bottom: 19px;
+			}
 		}
 	}
 
@@ -377,10 +557,20 @@
 
 			&:not(:last-child) {
 				margin-right: 16px;
+
+				@media (max-width: 1200px) {
+					margin-right: 16px;
+				}
 			}
 
 			img {
 				margin-right: 16px;
+
+				@media (max-width: 1200px) {
+					height: 27px;
+					width: 27px;
+					margin-right: 14px;
+				}
 			}
 
 			.feedback__amount {
@@ -392,6 +582,12 @@
 				@include ffr400;
 				@include center;
 				justify-content: start;
+
+				@media (max-width: 1200px) {
+					width: 44px;
+					font-size: 12px;
+					line-height: 14px;
+				}
 			}
 		}
 	}
@@ -404,6 +600,12 @@
 		.footer__logo {
 			margin: 36px auto 26px 0;
 			display: block;
+
+			@media (max-width: 1200px) {
+				margin: 24px auto 17px 0;
+				width: 95px;
+				height: 26px;
+			}
 		}
 
 		&:nth-of-type(2) {
@@ -420,12 +622,20 @@
 				height: 140px;
 				text-align: left;
 				color: $light_gray;
+
+				@media (max-width: 1200px) {
+					height: 95px;
+				}
 			}
 	
 			h4 {
 				height: 100px;
 				text-align: left;
 				justify-content: start;
+
+				@media (max-width: 1200px) {
+					height: 67px;
+				}
 			}
 		}
 		
@@ -438,14 +648,29 @@
 			text-transform: uppercase;
 			height: 80px;
 			line-height: 18px;
+
+			@media (max-width: 1200px) {
+				height: 54px;
+				line-height: 14px;
+				font-size: 14px;
+			}
 	
 			& > span {
 				@include ffr700;
 				line-height: 80px;
+
+				@media (max-width: 1200px) {
+					line-height: 54px;
+				}
 	
 				& > span {
 					font-size: 36px;
 					line-height: 36px;
+
+					@media (max-width: 1200px) {
+						font-size: 24px;
+						line-height: 24px;
+					}
 				}
 			}
 		}
@@ -456,22 +681,41 @@
 			justify-content: space-between;
 			border-top: 1px solid $light_gray;
 			margin-bottom: 37px;
+
+			@media (max-width: 1200px) {
+				height: 29px;
+				margin-bottom: 25px;
+			}
 	
 			p {
 				@include center;
 				@include ffr400it;
+				justify-content: start;
 				text-align: left;
 				color: $light_gray;
+				width: 96px;
+
+				@media (max-width: 1200px) {
+					width: 90px;                                    /* тоже че-т странное*/
+					font-size: 12px;
+				}
 			}
 	
 			.social__wrap {
-				@include center;	
+				@include center;
+				justify-content: space-between;
+				width: 100%;
+				margin-left: 30px;	
+
+				@media (max-width: 1200px) {
+					margin-left: 20px;
+				}
 	
 				img {
-					margin: 0 11px 0 0;
-	
-					&:last-of-type {
-						margin: 0;
+
+					@media (max-width: 1200px) {
+						height: 16px;
+						width: 16px;
 					}
 				}
 			}
@@ -481,6 +725,11 @@
 			display: flex;
 			height: 55px;	
 			font-size: 18px;
+
+			@media (max-width: 1200px) {
+				height: 37px;	
+				font-size: 14px;
+			}
 	
 			.form__subscribe {
 				max-width: 370px;
@@ -494,6 +743,10 @@
 				display: block;
 				width: 100%;
 				height: 55px;
+
+				@media (max-width: 1200px) {
+					height: 37px;	
+				}
 	
 				&::placeholder {
 					color: $light_gray;				
@@ -516,6 +769,10 @@
 				border: none;
 				text-transform: uppercase;
 				height: 100%;
+
+				@media (max-width: 1200px) {
+					width: 145px;                           /*! очень странный размер*/
+				}
 	
 				&:hover {
 					background: $mint-btn_hover;
@@ -538,16 +795,31 @@
 
 				&:not(:last-of-type) {
 					margin-bottom: 20px;
+
+					@media (max-width: 1200px) {
+						margin-bottom: 14px;
+					}
 				}
 
 				img {
 					margin-right: 30px;
+
+					@media (max-width: 1200px) {
+						margin-right: 20px;
+						height: 71px;
+					}
 				}
 
 				h4 {
 					font-size: 18px;
 					line-height: 21px;
 					height: 70px;
+
+					@media (max-width: 1200px) {
+						font-size: 14px;
+						line-height: 16px;
+						height: 47px;
+					}
 				}	
 				
 				p {
@@ -557,6 +829,11 @@
 					font-size: 13px;
 					color: $dark;
 					justify-content: start;
+
+					@media (max-width: 1200px) {
+						font-size: 12px;
+						height: 24px;
+					}
 				}
 			}
 		}
@@ -581,6 +858,11 @@
 			text-transform: uppercase;
 			color: $dark;
 			text-decoration: underline;
+
+			@media (max-width: 1200px) {
+				height: 42px;
+				font-size: 12px;
+			}
 		}
 	}
 }
