--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -9,5 +9,10 @@
 		height: 50px;
 		margin-top: 42px;
 		font-size: 13px;
+
+		@media (max-width: 1200px) {
+			height: 45px;
+			margin-top: 23px;
+		}
 	}
 }
