--- a/scss/futures.scss
+++ b/scss/futures.scss
@@ -17,16 +17,30 @@
 			color: $white;
 			height: 250px;
 
+			@media (max-width: 1200px) {
+				height: 167px;
+			}
+
 			h3 {
 				@include ffr700;				
 				font-size: 64px;
 				line-height: 54px;
+
+				@media (max-width: 1200px) {
+					font-size: 48px;
+					line-height: 56px;
+				}
 			}
 
 			small {
 				@include ffr500;
 				font-size: 24px;
 				line-height: 24px;
+				
+				@media (max-width: 1200px) {
+					@include ffr400;
+					font-size: 18px;
+				}
 			}
 		}
 
