--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -61,21 +61,37 @@
 
 @mixin section_padding-top {
 	padding-top: 42px;
+
+	@media (max-width: 1200px) {
+		padding-top: 29px;
+	}
 }
 
 @mixin section_padding-top-2 {
 	padding-top: 84px;
+
+	@media (max-width: 1200px) {
+		padding-top: 58px;
+	}
 }
 
 @mixin column {
 	margin: 0 -15px;
 	display: flex;
+
+	@media (max-width: 1200px) {
+		margin: 0 -10px;
+	}
 }
 
 @mixin column__item {
 	width: 33.333%;
 	margin: 0;
 	padding: 0 15px;
+
+	@media (max-width: 1200px) {
+		padding: 0 10px;
+	}
 }
 
 @mixin column__next--hover {
@@ -103,9 +119,19 @@
 	height: 100%;
 	background: linear-gradient(360deg, rgba(237, 215, 137, 0.9) 0%, rgba(233, 130, 131, 0.9) 100%);
 	opacity: 0;
+
+	@media (max-width: 1200px) {
+		left: 10px;
+		right: 10px;
+		width: calc(100% - 20px);	
+	}
 }
 
 @mixin transform_-16 {
 	transform: translate(-16px, -16px);
 	opacity: 1;
+
+	@media (max-width: 1200px) {
+		transform: translate(-6px, -6px);
+	}
 }
