--- a/scss/partners.scss
+++ b/scss/partners.scss
@@ -8,5 +8,17 @@
 		align-items: center;
 		width: 100%;
 		height: 221px;
+
+		@media (max-width: 1200px) {
+			padding: 0 23px;
+			height: 143px;
+		}
+
+		img {
+
+			@media (max-width: 1200px) {
+				width: 50px;
+			}	
+		}
 	}
 }
