--- a/scss/reviews.scss
+++ b/scss/reviews.scss
@@ -5,17 +5,32 @@
 		margin: 0 auto;
 		padding: 42px 0;
 
+		@media (max-width: 1200px) {
+			max-width: 808px;
+			padding: 28px 0;
+		}
+
 		.carousel-item {
 		
 			img {
 				width: 170px;
 				height: 170px;
 				margin-right: 30px;
+
+				@media (max-width: 1200px) {
+					width: 115px;
+					height: 115px;
+					margin-right: 38px;
+				}
 			}
 
 			.carousel-img--without-photo {
 				padding: 35px;
 				border: 2px solid $mint;
+
+				@media (max-width: 1200px) {
+					padding: 24px;
+				}
 			}
 
 			.reviews__content {
@@ -29,6 +44,13 @@
 					text-align: left;
 					padding: 6px 0;
 					margin-bottom: 21px;
+
+					@media (max-width: 1200px) {
+						font-size: 18px;
+						line-height: 21px;
+						padding: 2px 0;
+						margin-bottom: 14px;
+					}
 				}
 
 				.reviews__name {
@@ -40,6 +62,12 @@
 					padding-left: 126px; 
 					position: relative;
 
+					@media (max-width: 1200px) {
+						font-size: 24px;
+						padding-left: 85px; 
+						line-height: 36px;
+					}
+
 					&::after {
 						content: '';
 						position: absolute;
@@ -48,6 +76,11 @@
 						width: 70px;
 						height: 4px;
 						background: $pink;
+
+						@media (max-width: 1200px) {
+							width: 47px;
+							top: 16px;
+						}
 					}
 				}
 			}
@@ -60,5 +93,9 @@
 
 	&--space-around {
 		margin: 84px 0;
+
+		@media (max-width: 1200px) {
+			margin: 58px 0;
+		}
 	}
 }
