--- a/scss/topping.scss
+++ b/scss/topping.scss
@@ -5,6 +5,12 @@
 	@include center;
 	color: $dark;
 	height: 80px;
+
+	@media (max-width: 1200px) {
+		font-size: 24px;
+		line-height: 34px;
+		height: 67px;
+	}
 }
 
 .title {
@@ -17,6 +23,13 @@
 	height: 105px;
 	padding-bottom: 24px;
 	position: relative;
+
+	@media (max-width: 1200px) {
+		font-size: 24px;
+		line-height: 28px;
+		height: 88px;
+		padding-bottom: 20px;
+	}
 
 	&--pink {
 		color: $pink;
@@ -32,6 +45,10 @@
 		background-color: $pink;
 		position: absolute;
 		margin: 0 auto;
+
+		@media (max-width: 1200px) {
+			width: 148px;
+		}
 	}
 }
 
@@ -42,4 +59,10 @@
 	@include center;
 	color: $black;
 	height: 118px;
+
+	@media (max-width: 1200px) {
+		font-size: 14px;
+		line-height: 16px;
+		height: 99px;
+	}
 }
