--- a/scss/works.scss
+++ b/scss/works.scss
@@ -1,9 +1,17 @@
+.works {
+	@include section_padding-top-2;
+}
+
 .works__group {
 	margin-top: 42px;
 	display: grid;
 	grid-template-areas: "img-1 img-2 img-3 img-4" "img-5 img-6 img-3 img-7";
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(2, 1fr);
+
+	@media (max-width: 1200px) {
+		margin-top: 28px;
+	}
 
 	.works__items {
 		position: relative;
@@ -18,6 +26,12 @@
 			left: 0;
 			right: 0;
 			width: 100%;
+
+			@media (max-width: 1200px) {
+				left: 0;
+				right: 0;
+				width: 100%;
+			}
 		}
 	
 		.column__next {
@@ -28,6 +42,12 @@
 				margin: 0 auto;
 				width: 42px;
 				height: 42px;
+				
+				@media (max-width: 1200px) {
+					margin-top: 25px;
+					width: 28px;
+					height: 28px;
+				}
 			}
 	
 			p {
@@ -39,13 +59,23 @@
 				margin-top: 57px;
 				width: 100%;
 				text-align: center;
+
+				@media (max-width: 1200px) {
+					font-size: 18px;
+					line-height: 34px;
+					margin-top: 39px;
+				}
 	
 				small {
 					@include ffr400;
 					font-size: 18px;
 					line-height: 30px;
 					text-transform: none;
-					margin-top: 0;
+
+					@media (max-width: 1200px) {
+						font-size: 14px;
+						line-height: 20px;
+					}
 				}
 			}
 		}
@@ -59,9 +89,7 @@
 			.column__next {
 				opacity: 1;
 			}
-	
 		}
-	
 	}
 }
 
