--- a/scss/index.scss
+++ b/scss/index.scss
@@ -18,7 +18,7 @@
 @import './footer.scss';
 @import './reviews.scss';
 @import './works.scss';
-@import './platform.scss';
+// @import './platform.scss';
 
 *{
 	text-decoration: none;
@@ -40,6 +40,11 @@ h1, h2, h3, h4, h5, h6, body, .description, p {
 
 	@media (max-width: 1200px) {
 		max-width: 1024px;
+		padding: 0 16px;
+	}
+
+	@media (max-width: 576px) {
+		max-width: 540px;
 		padding: 0 16px;
 	}
 }
