--- a/scss/intro.scss
+++ b/scss/intro.scss
@@ -34,6 +34,11 @@
 			font-size: 48px;
 			line-height: 54px;
 		}
+
+		@media (max-width: 576px) {
+			padding-top: 90px;
+			font-size: 36px;
+		}
 	}
 
 	.intro__title {
@@ -59,6 +64,13 @@
 			margin-bottom:50px;
 		}
 
+		@media (max-width: 576px) {
+			font-size: 48px;
+			line-height: 59px;
+			padding-bottom: 20px;
+			height: 231px;
+		}
+
 		&::after {
 			content: '';
 			left: 0;
@@ -72,6 +84,10 @@
 
 			@media (max-width: 1200px) {
 				width: 115px;
+			}
+
+			@media (max-width: 576px) {
+				width: 134px;
 			}
 		}
 	}
@@ -96,6 +112,11 @@
 			font-size: 18px;
 			line-height: 21px;
 			margin-bottom: 75px;
+		}
+
+		@media (max-width: 576px) {
+			width: 100%;
+			margin-bottom: 50px;
 		}
 
 		&:hover {
