--- a/scss/devices.scss
+++ b/scss/devices.scss
@@ -13,6 +13,7 @@
 
 	@media (max-width: 576px) {
 		padding-bottom: 25px;
+		background-image: url('../img/unsplash_lpjb_UMOyx80.png');
 	}
 
 	&::after {
