--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -73,6 +73,10 @@
 	@media (max-width: 1200px) {
 		padding-top: 58px;
 	}
+
+	@media (max-width: 576px) {
+		padding-top: 29px;
+	}
 }
 
 @mixin column {
@@ -85,6 +89,7 @@
 
 	@media (max-width: 576px) {
 		margin: 0;
+		flex-wrap: wrap;
 	}
 }
 
@@ -115,10 +120,6 @@
 	width: 100%;
 	height: 100%;
 	transition: .3s;
-
-	@media (max-width: 576px) {
-		height: 83px;
-	}
 }
 
 @mixin column__content--gradient {
@@ -143,7 +144,6 @@
 		left: 0;
 		right: 0;
 		width: 100%;
-		height: 83px;
 	}
 }
 
