add @media (max-width: 576px)

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -18,7 +18,7 @@
 @import './footer.scss';
 @import './reviews.scss';
 @import './works.scss';
-// @import './platform.scss';
+@import './platform.scss';
 
 *{
 	text-decoration: none;
