--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -27,10 +27,12 @@
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../node_modules/bootstrap/scss/utilities/api";
-
-@import "./node_modules/bootstrap/scss/accordion";
-@import "./node_modules/bootstrap/scss/carousel";
-@import "./node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/dropdown";
+@import "../node_modules/bootstrap/scss/accordion";
+@import "../node_modules/bootstrap/scss/carousel";
+@import "../node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/transitions";
+// @import "../node_modules/bootstrap/scss/collapse";
 
 // 8. Add additional custom code here
 
@@ -71,6 +73,10 @@
 .carousel-control-prev, .carousel-control-next {
 	width: auto;
 	opacity: 1;
+
+	@media (max-width: 576px) {
+		display: none;
+	}
 }
 
 a {
@@ -87,6 +93,33 @@ ol, ul, dl {
 
 .container-fluid {
 	padding: 0;
+}
+
+.carousel-indicators {
+	margin: 0 0 29px;
+}
+
+.carousel-indicators [data-bs-target] {
+	width: 9px;
+	height: 9px;
+	border-radius: 50%;
+	border: 1px solid #C6CBCD;
+	margin: 0 21px 0 0;
+	background-color: rgba(0, 0, 0, 0);
+	opacity: 1;
+	display: none;
+
+	@media (max-width: 576px) {
+		display: block;
+	}
+
+	&:last-of-type {
+		margin: 0;
+	}
+	
+	&.active {
+		background-color: #C6CBCD;
+	}
 }
 
 // .accordion-button:after {
