--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,22 +1,11 @@
-// Custom.scss
-// Option B: Include parts of Bootstrap
-
-// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "../node_modules/bootstrap/scss/functions";
 
-// 2. Include any default variable overrides here
-
-// 3. Include remainder of required Bootstrap stylesheets
 @import "../node_modules/bootstrap/scss/variables";
 
-// 4. Include any default map overrides here
-
-// 5. Include remainder of required parts
 @import "../node_modules/bootstrap/scss/maps";
 @import "../node_modules/bootstrap/scss/mixins";
 @import "../node_modules/bootstrap/scss/root";
 
-// 6. Optionally include any other parts as needed
 @import "../node_modules/bootstrap/scss/utilities";
 @import "../node_modules/bootstrap/scss/reboot";
 @import "../node_modules/bootstrap/scss/type";
@@ -25,16 +14,12 @@
 @import "../node_modules/bootstrap/scss/grid";
 @import "../node_modules/bootstrap/scss/helpers";
 
-// 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../node_modules/bootstrap/scss/utilities/api";
 @import "../node_modules/bootstrap/scss/dropdown";
 @import "../node_modules/bootstrap/scss/accordion";
 @import "../node_modules/bootstrap/scss/carousel";
 @import "../node_modules/bootstrap/scss/buttons";
 @import "../node_modules/bootstrap/scss/transitions";
-// @import "../node_modules/bootstrap/scss/collapse";
-
-// 8. Add additional custom code here
 
 
 .carousel-control-prev-icon {
@@ -103,7 +88,7 @@ ol, ul, dl {
 	width: 9px;
 	height: 9px;
 	border-radius: 50%;
-	border: 1px solid #C6CBCD;
+	border: 1px solid $light_gray;
 	margin: 0 21px 0 0;
 	background-color: rgba(0, 0, 0, 0);
 	opacity: 1;
@@ -118,20 +103,74 @@ ol, ul, dl {
 	}
 	
 	&.active {
-		background-color: #C6CBCD;
+		background-color: $light_gray;
 	}
 }
 
-// .accordion-button:after {
-// 	width: 42px;
-// 	height: 42px;
-// 	content: "";
-// 	background-image: none;
-// 	background-image: url('../dist/arrow.5053a6e0.svg');
-// 	transform: rotate(-90deg);
-// 	background-repeat: no-repeat;
-// 	background-size: var(--bs-accordion-btn-icon-width);
-// 	transition: var(--bs-accordion-btn-icon-transition);
-// 	flex-shrink: 0;
-// 	margin-left: auto;
-// }
+.accordion-body {
+	font-size: 14px;
+	line-height: 17px;
+	@include ffr400;
+	border: none;
+	border: 1px solid $light_gray;
+	border-top: 0;
+
+	@media (max-width: 576px) {
+		font-size: 13px;
+		line-height: 15px;
+	}
+}
+
+.accordion-flush .accordion-item .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed {
+	font-size: 18px;
+	text-transform: uppercase;
+	line-height: 21px;
+	@include ffr700;
+	border: 1px solid $light_gray;
+
+	@media (max-width: 576px) {
+		font-size: 14px;
+		line-height: 18px;
+	}
+}
+
+.accordion-flush .accordion-item {
+	margin-bottom: 19px;
+
+	&:last-of-type {
+		margin-bottom: 0;
+	}
+}
+
+.accordion-item {
+	color: var(--bs-accordion-color);
+	background-color: var(--bs-accordion-bg);
+	border: 0;
+}
+
+.accordion-button:after {
+	background-image: none;
+	background-image: url('../img/arrow.svg');
+	transform: rotate(-90deg);
+}
+
+.accordion-button:not(.collapsed):after {
+	background-image: none;
+	background-image: url('../img/arrow.svg');	
+	transform: rotate(90deg);
+}
+
+.accordion-header {
+
+	img {
+		width: 42px;
+		height: 42px;
+		margin: 0 40px 0 0;
+
+		@media (max-width: 1200px) {
+			width: 36px;
+			height: 36px;
+			margin: 0 34px 0 0;
+		}
+	}
+}
