--- a/scss/devices.scss
+++ b/scss/devices.scss
@@ -19,7 +19,6 @@
 	&::after {
 		content: '';
 		right: 0;
-		left: 0;
 		bottom: 0;
 		width: 100%;
 		height: 100%;
@@ -28,45 +27,50 @@
 	}
 
 	.container {		
-		position: relative;
 		z-index: 1;
 
-		.devices__tablet {
+		.devices__wrap {
+			width: 100%;
+			height: 100%;
+			position: relative;
 			margin: 59px auto 0;
 			max-width: 685px;
-			width: 100%;
-			display: block;
-			
-			@media (max-width: 1200px) {
-				max-width: 463px;
-				margin: 40px auto 0;
-			}
 
+			@media (max-width: 1200px) {
+				margin: 40px auto 0;
+				max-width: 463px;
+			}
+			
 			@media (max-width: 576px) {
 				margin: 37px auto 0;
 				max-width: 540px;
 			}
-		}
 
-		.devices__phone {
-			position: absolute;
-			right: 200px;
-			top: 456px;
-			z-index: 5;
-			width: 200px;
-
-			@media (max-width: 1200px) {
-				right: 250px;
-				top: 338px;
-				width: 136px;
+			.devices__tablet {
+				width: 100%;
+				display: block;
 			}
-
-			@media (max-width: 576px) {
-				height: 175px;
-				width: 85px;
-				top: auto;
-				bottom: -49px;
-				right: 29px;
+	
+			.devices__phone {
+				position: absolute;
+				right: -72px;
+				top: 212px;
+				z-index: 5;
+				width: 200px;
+	
+				@media (max-width: 1200px) {
+					right: -48px;
+					top: 144px;
+					width: 136px;
+				}
+	
+				@media (max-width: 576px) {
+					height: 175px;
+					width: 85px;
+					top: auto;
+					bottom: -49px;
+					right: 29px;
+				}
 			}
 		}
 	}
